# invicodatpy

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  setup.py
src/invicodatpy/: all.py
src/invicodatpy/config/: __dotenv.py  __init__.py
src/invicodatpy/exceptions/: read_exceptions.py
src/invicodatpy/icaro/: __init__.py  icaro.py  migrate_icaro.py
src/invicodatpy/models/: __init__.py  all.py  icaro_model.py  sgf_model.py  sgo_model.py  sgv_model.py  siif_model.py  slave_model.py  sscc_model.py
src/invicodatpy/sgf/: __init__.py  all.py  certificados_obras.py  connect_sgf.py  join_resumen_rend_prov_cuit.py  listado_prov.py  pywinauto_identifiers.txt  resumen_rend_obras.py  resumen_rend_prov.py  sgf.py
src/invicodatpy/sgo/: __init__.py  all.py  connect_sgo.py  listado_obras.py  lotes_certificados.py
src/invicodatpy/sgv/: .~lock.InformeVariacionSaldosRecuperosCobrar.xlsx#  __init__.py  all.py  barrios_nuevos.py  connect_sgv.py  resumen_facturado.py  resumen_recaudado.py  resumen_recaudado_new (not working).py  saldo_barrio.py  saldo_barrio_variacion.py  saldo_motivo.py  saldo_motivo_actualizacion_semestral.py  saldo_motivo_entrega_viviendas.py  saldo_motivo_por_barrio.py  (+2 more)
tests/: pytest.ini
tests/sgf/: conftest.py  test_sgf_connection.py  test_sgf_rend_prov.py
tests/siif/: conftest.py  test_siif_conection.py  test_siif_connection.py  test_siif_rcg01_uejp.py  test_siif_rci02.py  test_siif_rdeu012.py  test_siif_rf602.py  test_siif_rf610.py  test_siif_rfondo07tp.py  test_siif_rpa03g.py  test_siif_rvicon03.py
tests/utils/: hangling_path.py
(+41 files in other folders)
