[tool.poetry]
name = "invicodatpy"
version = "0.1.0"
description = "Set of functions to read (input), modify (process) and write (output) different types of INVICO's (Instituto de Vivienda de Corrientes) files (xls, csv, sqlite). It's the first step of a posterior PyQt ecosystem. The database it's not provide within this package due to privacy reasons."
authors = ["Fernando Corrales <fscpython@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
selenium = "^4.23.1"
pytest = "^8.3.2"
sqlalchemy = "^1.4"
pywinauto = "^0.6.8"
webdriver-manager = "^4.0"
gspread = "^6.1.2"
oauth2client = "^4.1"
pandas = "^1.5"
numpy = "1.26.4"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.test.dependencies]
ptpython = "^3.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
